# CHIP-8

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
include/: FontSet.hpp  Keypad.hpp  Memory.hpp  Registers.hpp  Stack.hpp  Video.hpp
src/: CMakeLists.txt  CPU.cpp  CPU.hpp  FontSet.cpp  Instructions.cpp  Instructions.hpp  Keypad.cpp  Keypad.hpp  Memory.cpp  Memory.hpp  Platform.cpp  Platform.hpp  Registers.cpp  Registers.hpp  Stack.cpp  Stack.hpp  Timers.cpp  Timers.hpp  Video.cpp  Video.hpp  main.cpp
test/: CMakeLists.txt  MemoryTest.cpp  Stack.test.cpp  VideoTest.cpp
